--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "SaFQA APP",
   "icons": [
     {
-      "src": "Fawateer.jpg",
+      "src": "Logo.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "Fawateer.jpg",
+      "src": "Logo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "Fawateer.jpg",
+      "src": "Logo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
